posiGen_FullsendBox/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Numeric_ID__c</fullName>
        <formula>Opportunity__r.Account_Numeric_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activation_Scheduled_Date__c</fullName>
        <label>Activation Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <summarizedField>Milestone__c.Actual_Start_Date__c</summarizedField>
        <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Age_of_Home_p__c</fullName>
        <formula>Opportunity__r.Age_of_Home__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Approved_Date__c</fullName>
        <label>Agreement Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Prepared_Date__c</fullName>
        <label>Agreement Prepared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Date__c</fullName>
        <label>Agreement Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Tasks_Complete__c</fullName>
        <formula>AND(Number_of_Tasks__c &gt; 0,  Number_of_Open_Tasks__c = 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Tasks Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Animals_Present__c</fullName>
        <label>Animals Present</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Household_Income__c</fullName>
        <formula>Opportunity__r.Annual_Household_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Required__c</fullName>
        <formula>Opportunity__r.Appointment_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointment_Required_to_do_a_Service_Cal__c</fullName>
        <formula>Opportunity__r.Property__r.Appointment_Required_to_do_a_Service_Cal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Required for Service Call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_of_Home_Square_ft__c</fullName>
        <formula>TEXT(Opportunity__r.Area_of_Home__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area of Home (Square ft)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed_Date__c</fullName>
        <label>Assessment Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Requested_Date__c</fullName>
        <label>Assessment Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attic_Access__c</fullName>
        <formula>Text(Opportunity__r.Attic_Access__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attic Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attic_Type__c</fullName>
        <formula>Text(Opportunity__r.Attic_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attic Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Stream_Type__c</fullName>
        <label>B-Stream Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cust. location of panels or wire (ELECTRICAL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust. roof Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust. out of town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust. unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active removal case (elect.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Want more panels (elect.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending HOA approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending HDLC approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust. unhappy with color of panels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home under construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel upgrades (elect.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipality hold up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tree removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITC Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Approved_Date__c</fullName>
        <label>Billing Packet Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Comment__c</fullName>
        <label>Billing Packet Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Packet Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Resubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box once you have attached all missing documents and/or entered missing information</inlineHelpText>
        <label>Billing Packet Resubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Status__c</fullName>
        <description>Picklist to keep track of billing packet status</description>
        <label>Billing Packet Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_packet_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box will be checked if the Billing packet is submitted</description>
        <inlineHelpText>Check this box once you have attached all the required assessment and install documents and photos into Salesforce</inlineHelpText>
        <label>Billing packet submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_Panels_Required__c</fullName>
        <formula>Opportunity__r.Are_black_panels_required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Opportunity record.</inlineHelpText>
        <label>Black Panels Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_Panels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Black Panels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Breaker_Box__c</fullName>
        <description>KDH field</description>
        <label>Breaker Box</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrightPath_True_Up_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that 360-degree house photos have been taken to confirm Brightpath design</description>
        <inlineHelpText>Indicates that 360-degree house photos have been taken to confirm Brightpath design</inlineHelpText>
        <label>BrightPath True Up Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Age__c</fullName>
        <description>The number of days it took to receive the building permit.</description>
        <formula>Building_Permit_Received_Date__c  -  Building_Permit_Applied_For_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Permit Application Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Applied_For_Date__c</fullName>
        <label>Building Permit Applied For Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Number__c</fullName>
        <label>Building Permit Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Received_Date__c</fullName>
        <label>Building Permit Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Stories__c</fullName>
        <formula>Text(Opportunity__r.Building_Storys__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Stories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Requested_Date__c</fullName>
        <label>Cancellation Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_priortiy__c</fullName>
        <formula>text(Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Priority of the originating case</inlineHelpText>
        <label>Case priortiy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_order_points__c</fullName>
        <description>Change orders over the initial work order points</description>
        <inlineHelpText>Enter in any additional points over the initial work order points</inlineHelpText>
        <label>Change order points</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_box_if_system_install_is_100__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box if system install is 100% complete</description>
        <label>Check box if install is 100% complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Opportunity__r.Elec_Acct_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Date_SC__c</fullName>
        <description>KDH field</description>
        <label>Commission Date (SC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioned_in_PowerDash_Date__c</fullName>
        <label>Commissioned in PowerDash Date</label>
        <summarizedField>Systems__c.Commissioned_Date__c</summarizedField>
        <summaryForeignKey>Systems__c.Install_Project_Created_On__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_from_contract__c</fullName>
        <formula>EE_Completed_Date__c - Opportunity__r.Contracts_Approved_Date__c</formula>
        <inlineHelpText>Days from contract approved to EE completed</inlineHelpText>
        <label>Completion from contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Components_Removed__c</fullName>
        <label>Components Removed</label>
        <picklist>
            <picklistValues>
                <fullName>Rails &amp; Panels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditional_Acceptance_Received_Date__c</fullName>
        <label>Conditional Acceptance Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval_Applied_Date__c</fullName>
        <label>Conditional Approval Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractors_notes__c</fullName>
        <inlineHelpText>Enter any relevant information about this project</inlineHelpText>
        <label>Contractors notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Opportunity__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Method__c</fullName>
        <inlineHelpText>Manual - normal
Import - batch import
Workflow - workflow rule</inlineHelpText>
        <label>Created Method</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crew_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Look up the crew leader</inlineHelpText>
        <label>Crew Leader</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Subcontractor__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Energy_Audit__c</fullName>
        <label>Current Energy Audit</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Acceptance_Received_Date__c</fullName>
        <label>Customer Acceptance Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <formula>Opportunity__r.Account.PersonEmail</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Home_Phone__c</fullName>
        <formula>Opportunity__r.Account_Phone__c</formula>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Mobile_Phone__c</fullName>
        <formula>Opportunity__r.Account_Mobile__c</formula>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Opportunity__r.Account_Name_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Work_Phone__c</fullName>
        <formula>Opportunity__r.Account.Phone</formula>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Only_of_Marked_Completed_On_Date__c</fullName>
        <description>Returns only the date of the Marked Completed on Date field</description>
        <formula>DATEVALUE( Marked_Completed_On_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Only of Marked Completed On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Building_Permit_Applied_For__c</fullName>
        <formula>TODAY() -  Building_Permit_Applied_For_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Building Permit Applied For</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Building_Permit_Received__c</fullName>
        <description>Number of days since building permit was received</description>
        <formula>TODAY() - Building_Permit_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Building Permit Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Electrical_Install_Date__c</fullName>
        <formula>TODAY() -  PVI_Electrical_Installed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Electrical Install Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_FIeld_Verification_Request__c</fullName>
        <formula>Today()- Field_Verification_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since FIeld Verification Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Inspection_Requested_Date__c</fullName>
        <formula>Today () -  Inspection_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since  Inspection Requested Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Install_Marked_Complete__c</fullName>
        <formula>TODAY() -  DATEVALUE(Marked_Completed_On_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Install Marked Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_NMIA_Received_Date__c</fullName>
        <formula>TODAY() -  NMIA_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since NMIA Received Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_NMIA_Submitted_Date__c</fullName>
        <formula>TODAY() -  NMIA_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since NMIA Submitted Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_P_R_Installed__c</fullName>
        <formula>TODAY() -  PVI_Rails_Installed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since P&amp;R Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Placed_In_Service_Date__c</fullName>
        <formula>TODAY() -  PVI_Placed_In_Service_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Placed In Service Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Refurbishing__c</fullName>
        <formula>Today () -  System_Refurbished_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Since Refurbishing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Removal__c</fullName>
        <formula>Today () - R_P_Removal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Removal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_cancellation__c</fullName>
        <formula>CASE( Letter_Type__c, 
&quot;1.	Pre-EA Cannot reach after three attempts- provide 15 days to respond&quot;,
 (Move_on_letter_date__c +15 - TODAY()),
&quot;2.	Pre-EA Renovations in progress or walls missing etc. – provide 60 days to complete renovations or fixes&quot;,
Move_on_letter_date__c +15 - TODAY(),
&quot;3.	Post EA House not weatherization read- provide 60 days to complete renovations or fixes&quot;,
Move_on_letter_date__c + 60 - TODAY(),
&quot;4.	Post EA Health and Safety concerns need to be satisfied- 30 days&quot;,
Move_on_letter_date__c + 30 - TODAY(),
&quot;5.	Post EA Cannot get a hold of- 15 days&quot;,
Move_on_letter_date__c + 15 - TODAY(),
&quot;6. MVR good shape, Not cost effective&quot; ,
Move_on_letter_date__c + 0 - TODAY(),
&quot;7. EE declined waiver&quot;,
Move_on_letter_date__c + 30 - TODAY(),00)</formula>
        <label>Days until cancellation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Assignee_Email_Address__c</fullName>
        <formula>Subcontractor__r.Default_Assignee_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Assignee Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_SC_Assignee_User__c</fullName>
        <formula>Subcontractor__r.Default_Assignee_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default SC Assignee User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Subcontractor_Partner_Role__c</fullName>
        <label>Default Subcontractor Partner Role</label>
        <picklist>
            <picklistValues>
                <fullName>PV Assessor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Assessor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Installer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployed_Differently_than_Designed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If micro-inverters are not deployed as designed, a change needs to occur in Enlighten</description>
        <label>Deployed Differently than Designed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EA_Audit_Dropbox_Link__c</fullName>
        <inlineHelpText>Dropbox link from the Audit</inlineHelpText>
        <label>EA Audit Dropbox Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EA_Rebate_Check_Number__c</fullName>
        <inlineHelpText>Enter the number of the check for EA rebates</inlineHelpText>
        <label>EA Rebate Check Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Rebate_Received_Date__c</fullName>
        <label>EA Rebate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Rebate_Submitted_Date__c</fullName>
        <label>EA Rebate Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Application_Approved_Date__c</fullName>
        <label>EA State Application Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Application_Submitted_Date__c</fullName>
        <label>EA State Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Payment_Reference_No__c</fullName>
        <label>EA State Payment Reference No.</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_State_Rebate_Amount__c</fullName>
        <label>EA State Rebate Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Approved_Date__c</fullName>
        <description>Date the Project was Approved.  Currently Applies to EA and EUs.</description>
        <inlineHelpText>Date the Project was Approved.  Currently Applies to EA and EUs.</inlineHelpText>
        <label>EE Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the EE Assessment which preceded this EE Upgrade Project.</inlineHelpText>
        <label>EE Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>EE Assessment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>EE Upgrades</relationshipLabel>
        <relationshipName>EE_Upgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE_Assessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This to for capturing the user that is doing the EE Assessment, whether they are Internal or External.</inlineHelpText>
        <label>EE Assessor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects_EE_Assessing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE_Assigned_Date_Age__c</fullName>
        <formula>today()-EE_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Assigned Date Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Assigned_Date__c</fullName>
        <label>EE Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Assignee_Notes__c</fullName>
        <description>Short information about the house kept here for reporting.</description>
        <inlineHelpText>Enter in significant, short information about the house</inlineHelpText>
        <label>EE Assignee Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EE_Completed_Date__c</fullName>
        <label>EE Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Dropbox_Link__c</fullName>
        <description>Link to external source for files and pictures</description>
        <inlineHelpText>Enter link from dropbox</inlineHelpText>
        <label>EE Dropbox Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EE_Initial_Submission_Date__c</fullName>
        <description>Date Project was initially submitted for Approval.  Currenlty Applies for EA and EU.</description>
        <inlineHelpText>Date Project was initially submitted for Approval.  Currenlty Applies for EA and EU.</inlineHelpText>
        <label>EE Initial Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Invoice_Date__c</fullName>
        <label>EE Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Invoice_Number__c</fullName>
        <label>EE Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_New_Contract_Marker__c</fullName>
        <formula>if( Opportunity__r.EE_Amount__c &lt;= 2400, IMAGE(&quot;servlet/servlet.FileDownload?file=015d0000003McmQ&quot;, &quot;MP&quot;, 100, 100), if( Opportunity__r.EE_Amount__c &gt;2400, IMAGE(&quot;servlet/servlet.FileDownload?file=015d00000084Gnk&quot;, &quot;MP&quot;, 100, 100),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE New Contract Marker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_QC_link__c</fullName>
        <description>QC link for One stop shop QC&apos;s</description>
        <inlineHelpText>Only to be used on combined QC/Audit/Upgrade jobs.</inlineHelpText>
        <label>EE QC link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EE_Rejected_Date__c</fullName>
        <inlineHelpText>Date the Project was initial rejected.  (Currently used for EA and EU)</inlineHelpText>
        <label>EE Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Rejection_Notes__c</fullName>
        <description>Rejection notes for projects that are rejected</description>
        <inlineHelpText>Notes for projects that are rejected</inlineHelpText>
        <label>EE Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EE_Scheduled_Date__c</fullName>
        <label>EE Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_amount__c</fullName>
        <formula>Opportunity__r.EE_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_solar_product__c</fullName>
        <formula>includes(Opportunity__r.Solar_Product__c,&quot;Energy Efficiency&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is there EE on the Opportunity. If not, STOP NOW</inlineHelpText>
        <label>EE solar product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_Final_Project_Approval_Date__c</fullName>
        <label>EU Final Project Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Final_Project_Submission_Date__c</fullName>
        <label>EU Final Project Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Payment_Reference_No__c</fullName>
        <label>EU Payment Reference No.</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Elec_Savings_DlrsPerYr__c</fullName>
        <label>EU Projected Electrical Savings $/yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>